@@ -1,5 +1,6 @@
 1.1.1 release
 
+	* move files one-by-one when moving storage for a torrent
 	* fix bug in enum_net() for BSD and Mac
 	* fix bug in python binding of announce_entry
 	* fixed bug related to flag_merge_resume_http_seeds flag in add_torrent_params
